--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1",
-    "mini-svg-data-uri": "^1.4.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
