--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
