--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.0",
     "react": "^18.3.1",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
