--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "sharp": "^0.33.5",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
