--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 1234",
+    "dev": "next dev --turbopack --port 1234",
     "build": "next build",
     "start": "next start --port 1234",
     "lint": "next lint"
@@ -16,11 +16,11 @@
     "lucide-react": "^0.365.0",
     "markdown-to-jsx": "^7.4.1",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.1.0",
+    "next": "15.2.1",
     "next-view-transitions": "^0.3.4",
-    "react": "^18.3.1",
+    "react": "19.0.0",
     "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0",
     "react-github-calendar": "^4.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
@@ -30,13 +30,19 @@
   },
   "devDependencies": {
     "@types/node": "^20.16.10",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.2.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.10",
+      "@types/react-dom": "19.0.4"
+    }
   }
 }
