--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 1234",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start --port 1234",
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.365.0",
-    "markdown-to-jsx": "^7.4.1",
+    "markdown-to-jsx": "^7.7.3",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.2.1",
+    "next": "15.3.0",
     "next-view-transitions": "^0.3.4",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-calendar-heatmap": "^1.9.0",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.0",
     "react-github-calendar": "^4.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
